--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+.App{
+  height: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* background-color: #61dafb; */
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #000000;
+  height:50px;
+  border: 5px solid #61dafb; 
+  
 }
 
-.App-link {
-  color: #61dafb;
+header ul li {
+  display: inline-block;
+  margin: 0 10px;
+  list-style: none;
+
+}
+header a{
+  text-decoration: none;
+  color: #000000;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.history{
+  display: flex;
+  flex-direction: row;
+  font-size: calc(10px + 2vmin);
+  color: #000000;
+  height:50px;
+  border: 5px solid #61dafb;
+  height: 100px; 
+  
+}
+.body{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin: 10px;
+}
+.body button{
+  margin: 8px;
+  color: #000000;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: transparent;
+  box-shadow: none;
+
 }
